--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,3 +48,8 @@ p {
     justify-content: center;
     align-items: center;
   }
+/* leaderboard list formating */
+  ul {
+      list-style: none;
+      padding: 0;
+  }
